docs/api/qiskit/0.29/qiskit.circuit.library.PauliGate.mdx
---
title: PauliGate (v0.29)
description: API reference for qiskit.circuit.library.PauliGate in qiskit v0.29
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.circuit.library.PauliGate
---

# PauliGate

<Class id="qiskit.circuit.library.PauliGate" isDedicatedPage={true} github="https://github.com/qiskit/qiskit/tree/stable/0.18/qiskit/circuit/library/generalized_gates/pauli.py" signature="PauliGate(label)" modifiers="class">
  Bases: `qiskit.circuit.gate.Gate`

  A multi-qubit Pauli gate.

  This gate exists for optimization purposes for the quantum statevector simulation, since applying multiple pauli gates to different qubits at once can be done via a single pass on the statevector.

  The functionality is equivalent to applying the pauli gates sequentially using standard Qiskit gates

  Create a new gate.

  **Parameters**

  *   **name** – The Qobj name of the gate.
  *   **num\_qubits** – The number of qubits the gate acts on.
  *   **params** – A list of parameters.
  *   **label** – An optional label for the gate.

  ## Methods Defined Here

  <span id="qiskit-circuit-library-pauligate-inverse" />

  ### inverse

  <Function id="qiskit.circuit.library.PauliGate.inverse" signature="PauliGate.inverse()">
    Return inverted pauli gate (itself).
  </Function>

  <span id="qiskit-circuit-library-pauligate-validate-parameter" />

  ### validate\_parameter

  <Function id="qiskit.circuit.library.PauliGate.validate_parameter" signature="PauliGate.validate_parameter(parameter)">
    Gate parameters should be int, float, or ParameterExpression
  </Function>

  ## Attributes

  ### decompositions

  <Attribute id="qiskit.circuit.library.PauliGate.decompositions">
    Get the decompositions of the instruction from the SessionEquivalenceLibrary.
  </Attribute>

  ### definition

  <Attribute id="qiskit.circuit.library.PauliGate.definition">
    Return definition in terms of other basic gates.
  </Attribute>

  ### duration

  <Attribute id="qiskit.circuit.library.PauliGate.duration">
    Get the duration.
  </Attribute>

  ### label

  <Attribute id="qiskit.circuit.library.PauliGate.label">
    Return instruction label

    **Return type**

    `str`
  </Attribute>

  ### params

  <Attribute id="qiskit.circuit.library.PauliGate.params">
    return instruction params.
  </Attribute>

  ### unit

  <Attribute id="qiskit.circuit.library.PauliGate.unit">
    Get the time unit of duration.
  </Attribute>
</Class>

