docs/api/qiskit/0.37/qiskit.circuit.library.PauliGate.mdx
---
title: PauliGate
description: API reference for qiskit.circuit.library.PauliGate
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.circuit.library.PauliGate
---

# PauliGate

<Class id="qiskit.circuit.library.PauliGate" github="https://github.com/qiskit/qiskit/tree/stable/0.21/qiskit/circuit/library/generalized_gates/pauli.py" signature="PauliGate(label)">
  Bases: [`qiskit.circuit.gate.Gate`](qiskit.circuit.Gate "qiskit.circuit.gate.Gate")

  A multi-qubit Pauli gate.

  This gate exists for optimization purposes for the quantum statevector simulation, since applying multiple pauli gates to different qubits at once can be done via a single pass on the statevector.

  The functionality is equivalent to applying the pauli gates sequentially using standard Qiskit gates.

  Can be applied to a [`QuantumCircuit`](qiskit.circuit.QuantumCircuit "qiskit.circuit.QuantumCircuit") with the [`pauli()`](qiskit.circuit.QuantumCircuit#pauli "qiskit.circuit.QuantumCircuit.pauli") method.

  Create a new gate.

  **Parameters**

  *   **name** – The Qobj name of the gate.
  *   **num\_qubits** – The number of qubits the gate acts on.
  *   **params** – A list of parameters.
  *   **label** – An optional label for the gate.

  ## Methods Defined Here

  ### inverse

  <Function id="qiskit.circuit.library.PauliGate.inverse" name="inverse" signature="PauliGate.inverse()">
    Return inverted pauli gate (itself).
  </Function>

  ### validate\_parameter

  <Function id="qiskit.circuit.library.PauliGate.validate_parameter" name="validate_parameter" signature="PauliGate.validate_parameter(parameter)">
    Gate parameters should be int, float, or ParameterExpression
  </Function>

  ## Attributes

  ### condition\_bits

  <Attribute id="qiskit.circuit.library.PauliGate.condition_bits" name="condition_bits">
    Get Clbits in condition.

    **Return type**

    `List`\[[`Clbit`](qiskit.circuit.Clbit "qiskit.circuit.classicalregister.Clbit")]
  </Attribute>

  ### decompositions

  <Attribute id="qiskit.circuit.library.PauliGate.decompositions" name="decompositions">
    Get the decompositions of the instruction from the SessionEquivalenceLibrary.
  </Attribute>

  ### definition

  <Attribute id="qiskit.circuit.library.PauliGate.definition" name="definition">
    Return definition in terms of other basic gates.
  </Attribute>

  ### duration

  <Attribute id="qiskit.circuit.library.PauliGate.duration" name="duration">
    Get the duration.
  </Attribute>

  ### label

  <Attribute id="qiskit.circuit.library.PauliGate.label" name="label">
    Return instruction label

    **Return type**

    `str`
  </Attribute>

  ### name

  <Attribute id="qiskit.circuit.library.PauliGate.name" name="name">
    Return the name.
  </Attribute>

  ### num\_clbits

  <Attribute id="qiskit.circuit.library.PauliGate.num_clbits" name="num_clbits">
    Return the number of clbits.
  </Attribute>

  ### num\_qubits

  <Attribute id="qiskit.circuit.library.PauliGate.num_qubits" name="num_qubits">
    Return the number of qubits.
  </Attribute>

  ### params

  <Attribute id="qiskit.circuit.library.PauliGate.params" name="params">
    return instruction params.
  </Attribute>

  ### unit

  <Attribute id="qiskit.circuit.library.PauliGate.unit" name="unit">
    Get the time unit of duration.
  </Attribute>
</Class>

